--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
-    <title>Projetos redes sociais</title>
+    <title>Projetos Redes Sociais</title>
 </head>
 <body>
-    <main></main>
+    <main>
     <section id="telefone">
-        <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+        <iframe src="home.html" name="tela" id="tela" frameborder="0">
+            Seu navegador não é compativel com isso.
+        </iframe>
     </section>
     <section id="redes-sociais">
-
+        <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+        <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+        <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br>
+        <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+        <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+        <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
     </section>
+</main>
     
 </body>
 </html>
